# reservoir-cpp

./: .gitignore  CMakeLists.txt  INSTALL.md  MIGRATION.md  MIGRATION_COMPLETE_REPORT.md  README_CPP.md  USER_GUIDE.md  analyze_components.sh  arc-cpp.prompt.yml  conanfile.py  debug_benchmark.cpp  debug_dimensions  debug_dimensions.cpp  debug_ip.cpp  functionality-test-results-1.ini  manual_test  manual_test.cpp  migrate_python_to_cpp.sh  migrate_python_to_cpp_1.ini  missing_classes.json  missing_functions.json  python_cpp_mapping_analysis.sh  simple_debug  simple_debug.cpp  test_analysis.sh  test_reservoir  test_reservoir.cpp  test_utils  test_utils.cpp  test_verification.py  vcpkg.json
.github/workflows/: README.md  c-cpp.yml  cpp-ci.yml  functionality-tests.yml
TO_REMOVE/: detailed_verification.py
cmake/: reservoircpp.pc.in  reservoircppConfig.cmake.in
docs/: README.md
examples/: CMakeLists.txt  complete_tutorial.cpp  intrinsic_plasticity_example.cpp  model_example.cpp  nvar_example.cpp  ops_example.cpp  practical_tutorial.cpp  simple_example.cpp  stage2_example.cpp  stage3_stage4_example.cpp  stage5_example.cpp  stage6_tutorial.cpp  stage7_tutorial.cpp
include/reservoircpp/: activations.hpp  benchmark.hpp  compat.hpp  concat.hpp  datasets.hpp  experimental.hpp  fuzz.hpp  gpu.hpp  hyper.hpp  matrix_generators.hpp  model.hpp  node.hpp  observables.hpp  ops.hpp  plotting.hpp  readout.hpp  reservoir.hpp  reservoircpp.hpp  types.hpp  utils.hpp  version.hpp
scripts/: prepare_release.sh
src/: CMakeLists.txt  benchmark.cpp  compat.cpp  concat.cpp  datasets.cpp  experimental.cpp  fuzz.cpp  gpu.cpp  hyper.cpp  matrix_generators.cpp  model.cpp  observables.cpp  ops.cpp  plotting.cpp  readout.cpp  reservoir.cpp
tests/: CMakeLists.txt  test_activations.cpp  test_datasets.cpp  test_main.cpp  test_matrix_generators.cpp  test_model.cpp  test_node.cpp  test_observables.cpp  test_ops.cpp  test_readout.cpp  test_reservoir.cpp  test_stage5.cpp  test_stage7.cpp  test_types.cpp  test_utils.cpp  test_version.cpp
