# Minimal CMakeLists.txt for src directory
# This will be expanded as we add core library components

# For now, this is a header-only library
# When we add source files, we'll build a static/shared library here

# Placeholder for future library source files
# add_library(reservoircpp_core STATIC)
# target_sources(reservoircpp_core PRIVATE
#     # Future source files will be added here
# )